fix vertical alignment in case there are no tokens vote but only gauge votes

--- a/assembl/static2/css/components/gaugeVoteForProposal.scss
+++ b/assembl/static2/css/components/gaugeVoteForProposal.scss
@@ -1,6 +1,6 @@
 .gauge-vote-for-proposal, .number-gauge-vote-for-proposal {
   width: 100%;
-  padding: 20px 10px;
+  padding: 0 10px 20px 10px;
 
   .rc-slider {
     height: 55px;
