--- a/assembl/static2/css/views/voteSession.scss
+++ b/assembl/static2/css/views/voteSession.scss
@@ -73,7 +73,7 @@
     }
 
     .proposal-vote-modules {
-      padding-top: 29px;
+      padding-top: 25px;
     }
 
     .tokens-line {
